--- a/newfiles_skel/etc/cups/policy_krb.conf
+++ b/newfiles_skel/etc/cups/policy_krb.conf
@@ -7,10 +7,12 @@
 
   # Job-related operations must be done by the owner or an administrator...
   <Limit Create-Job Print-Job Print-URI Validate-Job>
+    AuthType Negotiate
     Order deny,allow
   </Limit>
 
   <Limit Send-Document Send-URI Hold-Job Release-Job Restart-Job Purge-Jobs Set-Job-Attributes Create-Job-Subscription Renew-Subscription Cancel-Subscription Get-Notifications Reprocess-Job Cancel-Current-Job Suspend-Current-Job Resume-Job Cancel-My-Jobs Close-Job CUPS-Move-Job CUPS-Get-Document>
+    AuthType Negotiate
     Require user @OWNER @SYSTEM
     Order deny,allow
   </Limit>
